  Theremin 0.6.4:
    * Nicer and much more useful Growl notifications
    * Fixed library context menu
    * Added icon for shuffle toolbar button

  Theremin 0.6.3:
    * Added shuffle button to the toolbar
    * Updated Apple Remote support for newer OS X.
    * Updated Growl support, now falls back to to 10.8 Notification Center.
    * Now growls on stream title change
    * Universal binary with 64bit support

  Theremin 0.6.2.3:
    * Fix some oddities on Snow Leopard regarding the Profile systems.
    * Fix several memory leaks.
    * Fix autoreconnect not working after a long period of time of reconnecting. (#136)

  Theremin 0.6.2.2:
    * Fix crash on Mac OS X 10.6

  Theremin 0.6.2.1:
    * Fix crash when connecting to old MPD.

  Theremin 0.6.2:
    * Toggle MPD output devices
    * Refactoring
	* Volum Slider bug fixes.
	
  Theremin 0.6.1:
    * Last.fm cover art support.
	* Fixes a bug where the player and library tables were empty.
	* Various other bugfixes.
  
  Theremin 0.6.0:
    * Profile support.
    * A lot of refactoring - consider this a beta release.
    * Hidden option: defaults write at.justp.theremin squeezeboxSupportEnabled true
        This enables very, very experimental squeezebox support.
    * Removed amazon cover art support. As of August 15, one is required to
      sign the requests using their private key, which I am not willing to embed
      into an open source app.
    * Updated Sparkle to 1.5 b6 and enabled optional anonymous usage
      statistics.

  Theremin 0.5.3.1:
    * Batch re-setting of compilation info on import. This fixes a crash on startup experienced by some users.

  Theremin 0.5.3:
    * More code cleanup.
    * Added a 'Unknown Genre'.
    * Context Menu in Library works again. Also fixed some bugs concerning the Library.
    * Volume Slider can be changed using mousewheel now.
    * Clicking on the icon next to the volume slider now mutes MPD.