@@ -1,3 +1,6 @@
+  Theremin 0.7:
+    * Menu item to toggle crossfade
+
   Theremin 0.6.4:
     * Nicer and much more useful Growl notifications
     * Fixed library context menu
